infrastructure/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helix-web
  labels:
    app: helix-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helix-web
  template:
    metadata:
      labels:
        app: helix-web
    spec:
      containers:
        - name: web
          image: helix-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helix-web
spec:
  selector:
    app: helix-web
  ports:
    - port: 3000
      targetPort: 3000
